# nobs-whisper

./: .env.example  .gitignore  README.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: spets-task.yml
.github/workflows/: release.yml  spets.yml  sync-to-private.yml
NobsWhisperIndicator/: Package.swift
NobsWhisperIndicator/Sources/: main.swift
src/: app.html
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/src/: audio.rs  config.rs  indicator.rs  input.rs  lib.rs  main.rs  model.rs  native_shortcut.rs  shortcut.rs  state.rs  tray.rs  whisper.rs
src/routes/: +page.svelte
src/routes/indicator/: +page.svelte
